# test

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
app/: main.py  schemas.py
app/api/: __init__.py  search.py
app/services/: indexer.py  search.py
config/: __init__.py  config.py
front/: Dockerfile  streamlit_app.py
helpers/: download_model.py
infrastructure/: database.py
infrastructure/dependencies/: __init__.py  vector_db.py
notebooks/: index_clip_embeddings.ipynb  index_vertex.ipynb
