[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "search"
description = "Modalab Multimodal Search"
authors = [{name = "Modalab", email = "dev@modalab.com"}]
requires-python = ">=3.10"
version="0.0.1"
dependencies = [
    "APScheduler",
    "fastapi",
    "orjson",
    "pandas",
    "pillow",
    "python-dotenv",
    "google-cloud-aiplatform",
    "torch",
    "transformers",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "black",
    "flake8",
    "pre-commit",
    "isort",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
exclude = ["dist", "build", ".git", "__pycache__"]

[tool.isort]
profile = "black"
